# grpc_sample

./: .gitignore  README.md  default.conf  docker-compose.yml  docker_server.dockerfile  pyproject.toml
client/: __init__.py  __main__.py  sample_client.py
proto/: codegen.py  sample.proto  sample_pb2.py  sample_pb2_grpc.py
server/: __init__.py  __main__.py  sample_server.py
